...
    <string name="waiting_for_pod">Waiting for AirPods Connection…</string>
    <string name="donate">Buy me a coffee</string>
    <string name="donate_detail">Go AFDIAN</string>
    <string name="press_and_hold_settings"><![CDATA[Press & Hold]]></string>
    <string name="misc_title">Misc</string>
    <string name="conversational_awareness_title">Conversational Awareness</string>
    <string name="audio_title">Audio</string>
    <string name="conversational_awareness_summary">Lowers media volume and reduces background noise when you start speaking to other people</string>
    <string name="personlized_volume_title">Personalized Volume</string>
    <string name="personlized_volume_summary">Adjusts the volume of media in response to your environment</string>
    <string name="loud_sound_reduction_title">Loud Sound Reduction</string>
    <string name="loud_sound_reduction_summary">Reduces loud sounds you are exposed to</string>
    <string name="adjust_volume_by_swiper_title">Volume Control</string>
...
